@startuml ERD_Database
!theme plain
title Диаграмма "сущность-связь" - База данных ТехноМарт

' Определение сущностей
entity "users" as users {
  * id : UUID <<PK>>
  --
  * email : VARCHAR(255) <<UK>>
  * password_hash : VARCHAR(255)
  * first_name : VARCHAR(100)
  * last_name : VARCHAR(100)
  phone : VARCHAR(20)
  date_of_birth : DATE
  gender : VARCHAR(10)
  role : VARCHAR(20)
  is_active : BOOLEAN
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
  last_login_at : TIMESTAMP
}

entity "addresses" as addresses {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * country : VARCHAR(100)
  * city : VARCHAR(100)
  * street : VARCHAR(200)
  * building : VARCHAR(20)
  apartment : VARCHAR(20)
  postal_code : VARCHAR(20)
  is_default : BOOLEAN
  * created_at : TIMESTAMP
}

entity "categories" as categories {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(200)
  description : TEXT
  parent_id : UUID <<FK>>
  * slug : VARCHAR(200) <<UK>>
  sort_order : INTEGER
  is_active : BOOLEAN
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "brands" as brands {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(200) <<UK>>
  description : TEXT
  logo_url : VARCHAR(500)
  website : VARCHAR(500)
  is_active : BOOLEAN
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "products" as products {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(500)
  description : TEXT
  short_description : VARCHAR(1000)
  * price : DECIMAL(10,2)
  discount_price : DECIMAL(10,2)
  * category_id : UUID <<FK>>
  * brand_id : UUID <<FK>>
  * sku : VARCHAR(100) <<UK>>
  weight : DECIMAL(8,3)
  dimensions : VARCHAR(100)
  in_stock : INTEGER
  reserved_stock : INTEGER
  is_active : BOOLEAN
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "product_images" as product_images {
  * id : UUID <<PK>>
  --
  * product_id : UUID <<FK>>
  * image_url : VARCHAR(500)
  alt_text : VARCHAR(200)
  sort_order : INTEGER
  is_main : BOOLEAN
  * created_at : TIMESTAMP
}

entity "product_characteristics" as product_characteristics {
  * id : UUID <<PK>>
  --
  * product_id : UUID <<FK>>
  * name : VARCHAR(200)
  * value : VARCHAR(500)
  unit : VARCHAR(50)
  sort_order : INTEGER
}

entity "carts" as carts {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  session_id : VARCHAR(255)
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "cart_items" as cart_items {
  * id : UUID <<PK>>
  --
  * cart_id : UUID <<FK>>
  * product_id : UUID <<FK>>
  * quantity : INTEGER
  * added_at : TIMESTAMP
}

entity "orders" as orders {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * order_number : VARCHAR(50) <<UK>>
  * status : VARCHAR(20)
  * total_amount : DECIMAL(10,2)
  discount_amount : DECIMAL(10,2)
  delivery_amount : DECIMAL(10,2)
  payment_method : VARCHAR(20)
  delivery_method : VARCHAR(20)
  delivery_address : JSONB
  notes : TEXT
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
  delivery_date : TIMESTAMP
}

entity "order_items" as order_items {
  * id : UUID <<PK>>
  --
  * order_id : UUID <<FK>>
  * product_id : UUID <<FK>>
  * quantity : INTEGER
  * unit_price : DECIMAL(10,2)
  * total_price : DECIMAL(10,2)
}

entity "payments" as payments {
  * id : UUID <<PK>>
  --
  * order_id : UUID <<FK>>
  * amount : DECIMAL(10,2)
  * method : VARCHAR(20)
  * status : VARCHAR(20)
  transaction_id : VARCHAR(200)
  processed_at : TIMESTAMP
  notes : TEXT
  * created_at : TIMESTAMP
}

entity "deliveries" as deliveries {
  * id : UUID <<PK>>
  --
  * order_id : UUID <<FK>>
  * method : VARCHAR(20)
  tracking_number : VARCHAR(200)
  carrier_name : VARCHAR(200)
  * status : VARCHAR(20)
  estimated_date : TIMESTAMP
  actual_date : TIMESTAMP
  address : JSONB
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "reviews" as reviews {
  * id : UUID <<PK>>
  --
  * product_id : UUID <<FK>>
  * user_id : UUID <<FK>>
  * rating : INTEGER
  title : VARCHAR(500)
  content : TEXT
  pros : TEXT
  cons : TEXT
  is_recommended : BOOLEAN
  * status : VARCHAR(20)
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
  moderated_at : TIMESTAMP
  moderator_id : UUID <<FK>>
}

entity "review_images" as review_images {
  * id : UUID <<PK>>
  --
  * review_id : UUID <<FK>>
  * image_url : VARCHAR(500)
  caption : VARCHAR(200)
  sort_order : INTEGER
  * created_at : TIMESTAMP
}

entity "review_helpfulness" as review_helpfulness {
  * id : UUID <<PK>>
  --
  * review_id : UUID <<FK>>
  * user_id : UUID <<FK>>
  * is_helpful : BOOLEAN
  * created_at : TIMESTAMP
}

entity "product_ratings" as product_ratings {
  * product_id : UUID <<PK,FK>>
  --
  * average_rating : DECIMAL(3,2)
  * total_reviews : INTEGER
  rating_distribution : JSONB
  * last_updated : TIMESTAMP
}

' Определение связей
users ||--o{ addresses : "has"
users ||--o{ carts : "owns"
users ||--o{ orders : "places"
users ||--o{ reviews : "writes"
users ||--o{ review_helpfulness : "votes"

categories ||--o{ categories : "has subcategories"
categories ||--o{ products : "contains"
brands ||--o{ products : "manufactures"

products ||--o{ product_images : "has"
products ||--o{ product_characteristics : "has"
products ||--o{ cart_items : "added to"
products ||--o{ order_items : "ordered as"
products ||--o{ reviews : "reviewed as"
products ||--|| product_ratings : "has rating"

carts ||--o{ cart_items : "contains"

orders ||--o{ order_items : "contains"
orders ||--o| payments : "paid by"
orders ||--o| deliveries : "delivered by"

reviews ||--o{ review_images : "has"
reviews ||--o{ review_helpfulness : "voted on"

@enduml
